[Semantics] Story 26 - Add semantics
Add semantics and structure, and include typography updates.

--- a/src/epub/text/endnotes.xhtml
+++ b/src/epub/text/endnotes.xhtml
@@ -288,6 +288,96 @@
 				<li id="note-43" epub:type="rearnote">
 					<p>At the time of the first publication of this paper the picture of an old-fashioned <span epub:type="z3998:event">Christmas</span> in the country was pronounced by some as out of date. The author had afterwards an opportunity of witnessing almost all the customs above described, existing in unexpected vigor in the skirts of <span epub:type="z3998:place">Derbyshire</span> and <span epub:type="z3998:place">Yorkshire</span>, where he passed the <span epub:type="z3998:event">Christmas</span> holidays. The reader will find some notice of them in the author’s account of his sojourn at Newstead Abbey. <a href="../text/the-christmas-dinner.xhtml#noteref-43" epub:type="se:referrer">↩</a></p>
 				</li>
+				<li id="note-44" epub:type="rearnote">
+					<p>It is evident that the author of this interesting communication has included, in his general title of Little Britain, man of those little lanes and courts that belong immediately to Cloth Fair. <a href="../text/little-britain.xhtml#noteref-44" epub:type="se:referrer">↩</a></p>
+				</li>
+				<li id="note-45" epub:type="rearnote">
+					<p>As mine host of the Half-Moon’s Confession of Faith may not be familiar to the majority of readers, and as it is a specimen of the current songs of Little Britain, I subjoin it in its original orthography. I would observe that the whole club always join in the chorus with a fearful thumping on the table and clattering of pewter pots.</p>
+					<blockquote epub:type="z3998:song">
+						<p>
+							<span>I cannot eate but lytle meate,</span>
+							<br/>
+							<span class="i1">My stomacke is not good,</span>
+							<br/>
+							<span>But sure I thinke that I can drinke</span>
+							<br/>
+							<span class="i1">With him that weares a hood.</span>
+							<br/>
+							<span>Though I go bare, take ye no care,</span>
+							<br/>
+							<span class="i1">I nothing am a colde,</span>
+							<br/>
+							<span>I stuff my skyn so full within,</span>
+							<br/>
+							<span class="i1">Of joly good ale and olde.</span>
+							<br/>
+							<span>Backe and syde go bare, go bare,</span>
+							<br/>
+							<span class="i1">Both foote and hand go colde,</span>
+							<br/>
+							<span>But, belly, God send thee good ale ynoughe,</span>
+							<br/>
+							<span class="i1">Whether it be new or olde.</span>
+						</p>
+						<p>
+							<span>I have no rost, but a nut brawne toste,</span>
+							<br/>
+							<span class="i1">And a crab laid in the fyre;</span>
+							<br/>
+							<span>A little breade shall do me steade,</span>
+							<br/>
+							<span class="i1">Much breade I not desyre.</span>
+							<br/>
+							<span>No frost nor snow, nor winde, I trowe,</span>
+							<br/>
+							<span class="i1">Can hurte mee, if I wolde,</span>
+							<br/>
+							<span>I am so wrapt and throwly lapt</span>
+							<br/>
+							<span class="i1">>Of joly good ale and olde.</span>
+							<br/>
+							<span>Backe and syde go bare, go bare, <abbr class="eoc">etc.</abbr></span>
+						</p>
+						<p>
+							<span>And Tyb my wife, that, as her lyfe,</span>
+							<br/>
+							<span class="i1">Loveth well good ale to seeke,</span>
+							<br/>
+							<span>Full oft drynkes shee, tyll ye may see,</span>
+							<br/>
+							<span class="i1">The teares run downe her cheeke.</span>
+							<br/>
+							<span>Then doth shee trowle to me the bowle,</span>
+							<br/>
+							<span class="i1">Even as a mault-worme sholde,</span>
+							<br/>
+							<span>And sayth, sweete harte, I took my parte</span>
+							<br/>
+							<span class="i1">Of this jolly good ale and olde.</span>
+							<br/>
+							<span>Backe and syde go bare, go bare, <abbr class="eoc">etc.</abbr></span>
+						</p>
+						<p>
+							<span>Now let them drynke, tyll they nod and winke,</span>
+							<br/>
+							<span class="i1">Even as goode fellowes sholde doe,</span>
+							<br/>
+							<span>They shall not mysse to have the blisse,</span>
+							<br/>
+							<span class="i1">Good ale doth bring men to;</span>
+							<br/>
+							<span>And all poore soules that have scowred bowles,</span>
+							<br/>
+							<span class="i1">Or have them lustily trolde,</span>
+							<br/>
+							<span>God save the lyves of them and their wives,</span>
+							<br/>
+							<span class="i1">Whether they be yonge or olde.</span>
+							<br/>
+							<span>Backe and syde go bare, go bare, <abbr class="eoc">etc.</abbr> <a href="../text/little-britain.xhtml#noteref-45" epub:type="se:referrer">↩</a></span>
+						</p>
+					</blockquote>
+				</li>
 			</ol>
 		</section>
 	</body>
