--- a/src/epub/text/london-antiques.xhtml
+++ b/src/epub/text/london-antiques.xhtml
@@ -11,7 +11,7 @@
 				<h2 epub:type="title"><span epub:type="z3998:place">London</span> Antiques</h2>
 				<blockquote epub:type="epigraph z3998:poem">
 					<p>
-						<span class="i7">—⁠I do walk</span>
+						<span class="i7">—I do walk</span>
 						<br/>
 						<span>Methinks like Guide Vaux, with my dark lanthorn,</span>
 						<br/>
