[Semantics] Story 27 - Add semantics
Add semantics and structure, and include typography updates.

--- a/src/epub/text/endnotes.xhtml
+++ b/src/epub/text/endnotes.xhtml
@@ -378,6 +378,60 @@
 						</p>
 					</blockquote>
 				</li>
+				<li id="note-46" epub:type="rearnote">
+					<p>The following is the only stanza extant of this lampoon:—</p>
+					<blockquote>
+						<p>
+							<span>A parliament member, a justice of peace,</span>
+							<br/>
+							<span>At home a poor scarecrow, at <span epub:type="z3998:place">London</span> an asse,</span>
+							<br/>
+							<span>If lowsie is Lucy, as some volke miscalle it,</span>
+							<br/>
+							<span>Then Lucy is lowsie, whatever befall it.</span>
+							<br/>
+							<span class="i1">He thinks himself great;</span>
+							<br/>
+							<span class="i1">Yet an asse in his state,</span>
+							<br/>
+							<span>We allow by his ears but with asses to mate,</span>
+							<br/>
+							<span>If Lucy is lowsie, as some volke miscalle it,</span>
+							<br/>
+							<span>Then sing lowsie Lucy whatever befall it. <a href="../text/stratford-on-avon.xhtml#noteref-46" epub:type="se:referrer">↩</a></span>
+						</p>
+					</blockquote>
+				</li>
+				<li id="note-47" epub:type="rearnote">
+					<p>The luce is a pike or jack, and abounds in the Avon about Charlecot. <a href="../text/stratford-on-avon.xhtml#noteref-47" epub:type="se:referrer">↩</a></p>
+				</li>
+				<li id="note-48" epub:type="rearnote">
+					<p>A proof of Shakespeare’s random habits and associates in his youthful days may be found in a traditionary anecdote, picked up at <span epub:type="z3998:place">Stratford</span> by the elder Ireland, and mentioned in his <i epub:type="se:name.publication.book">Picturesque Views on the Avon</i>.</p>
+					<p>About seven miles from <span epub:type="z3998:place">Stratford</span> lies the thirsty little market-town of <span epub:type="z3998:place">Bedford</span>, famous for its ale. Two societies of the village yeomanry used to meet, under the appellation of the <span epub:type="z3998:place">Bedford</span> topers, and to challenge the lovers of good ale of the neighboring villages to a contest of drinking. Among others, the people of <span epub:type="z3998:place">Stratford</span> were called out to prove the strength of their heads; and in the number of the champions was Shakespeare, who, in spite of the proverb that “they who drink beer will think beer,” was as true to his ale as Falstaff to his sack. The chivalry of <span epub:type="z3998:place">Stratford</span> was staggered at the first onset, and sounded a retreat while they had yet the legs to carry them off the field. They had scarcely marched a mile when, their legs failing them, they were forced to lie down under a crab tree, where they passed the night. It was still standing, and goes by the name of Shakespeare’s tree.</p>
+					<p>In the morning his companions awaked the bard, and proposed returning to <span epub:type="z3998:place">Bedford</span>, but he declined, saying he had enough, having drank with</p>
+					<blockquote>
+						<p>
+							<span>Piping Pebworth, Dancing Marston,</span>
+							<br/>
+							<span>Haunted Hilbro’, Hungry Grafton,</span>
+							<br/>
+							<span>Dudging Exhall, Papist Wicksford,</span>
+							<br/>
+							<span>Beggarly Broom, and Drunken Bedford.</span>
+						</p>
+					</blockquote>
+					<p>“The villages here alluded to,” says Ireland, “still bear the epithets thus given them: the people of <span epub:type="z3998:place">Pebworth</span> are still famed for their skill on the pipe and tabor; <span epub:type="z3998:place">Hilborough</span> is now called <span epub:type="z3998:place">Haunted Hilborough</span>; and <span epub:type="z3998:place">Grafton</span> is famous for the poverty of its soil.” <a href="../text/stratford-on-avon.xhtml#noteref-48" epub:type="se:referrer">↩</a></p>
+				</li>
+				<li id="note-49" epub:type="rearnote">
+					<p>Scot, in his <i epub:type="se:name.publication.book">Discoverie of Witchcraft</i>, enumerates a of these fireside fancies: “And they have so fraid us with host bull-beggars, spirits, witches, urchins, elves, hags, fairies, satyrs, pans, faunes, syrens, kit with the can sticke, tritons, centaurs, dwarfes, giantes, imps, calcars, conjurors, nymphes, changelings, incubus, Robin-goodfellow, the spoorne, the mare, the man in the oke, the hell-waine, the fier drake, the puckle, Tom Thombe, hobgoblins, Tom Tumbler, boneless, and such other bugs, that we were afraid of our own shadowes.” <a href="../text/stratford-on-avon.xhtml#noteref-49" epub:type="se:referrer">↩</a></p>
+				</li>
+				<li id="note-50" epub:type="rearnote">
+					<p>This effigy is in white marble, and represents the knight in complete armor. Near him lies the effigy of his wife, and on her tomb is the following inscription; which, if really composed by her husband, places him quite above the intellectual level of Master Shallow:</p>
+					<p>Here lyeth the Lady Joyce Lucy wife of Sir Thomas Lucy of Charlecot in ye county of <span epub:type="z3998:place">Warwick</span>, Knight, Daughter and heir of Thomas Acton of <span epub:type="z3998:place">Sutton</span> in ye county of <span epub:type="z3998:place">Worcester</span> Esquire who departed out of this wretched world to her heavenly kingdom ye 10 day of February in ye yeare of our Lord God 1595 and of her age 60 and three. All the time of her lyfe a true and faythful servant of her good God, never detected of any cryme or vice. In religion most sounde, in love to her husband most faythful and true. In friendship most constant; to what in trust was committed unto her most secret. In wisdom excelling. In governing of her house, bringing up of youth in ye fear of God that did converse with her moste rare and singular. A great maintayner of hospitality. Greatly esteemed of her betters; misliked of none unless of the envyous. When all is spoken that can be saide a woman so garnished with virtue as not to be bettered and hardly to be equalled by any. As shee lived most virtuotisly so shee died most Godly. Set downe by him yt best did knowe what hath byn written to be true. <span class="signature">Thomas Lucye</span>. <a href="../text/stratford-on-avon.xhtml#noteref-50" epub:type="se:referrer">↩</a></p>
+				</li>
+				<li id="note-51" epub:type="rearnote">
+					<p>Bishop Earle, speaking of the country gentleman of his time, observes, “His housekeeping is seen much in the different families of dogs and serving-men attendant on their kennels; and the deepness of their throats is the depth of his discourse. A hawk he esteems the true burden of nobility, and is exceedingly ambitious to seem delighted with the sport, and have his fist gloved with his jesses.” And Gilpin, in his description of a <abbr>Mr.</abbr> Hastings, remarks, “He kept all sorts of hounds that run buck, fox, hare, otter, and badger; and had hawks of all kinds both long and short winged. His great hall was commonly strewed with marrowbones, and full of hawk perches, hounds, spaniels, and terriers. On a broad hearth, paved with brick, lay some of the choicest terriers, hounds, and spaniels.” <a href="../text/stratford-on-avon.xhtml#noteref-51" epub:type="se:referrer">↩</a></p>
+				</li>
 			</ol>
 		</section>
 	</body>
