[Semantics] Fix story ID

--- a/src/epub/text/stratford-on-avon.xhtml
+++ b/src/epub/text/stratford-on-avon.xhtml
@@ -6,7 +6,7 @@
 		<link href="../css/local.css" rel="stylesheet" type="text/css"/>
 	</head>
 	<body epub:type="bodymatter z3998:fiction">
-		<section id="roscoe" epub:type="volume se:short-story">
+		<section id="stratford-on-avon" epub:type="volume se:short-story">
 			<header>
 				<h2 epub:type="title z3998:place">Stratford-on-Avon</h2>
 				<blockquote epub:type="epigraph z3998:poem">
