[Semantics] Story 28 - Add semantics
Add semantics and structure, and include typography updates.

--- a/src/epub/text/endnotes.xhtml
+++ b/src/epub/text/endnotes.xhtml
@@ -432,6 +432,9 @@
 				<li id="note-51" epub:type="rearnote">
 					<p>Bishop Earle, speaking of the country gentleman of his time, observes, “His housekeeping is seen much in the different families of dogs and serving-men attendant on their kennels; and the deepness of their throats is the depth of his discourse. A hawk he esteems the true burden of nobility, and is exceedingly ambitious to seem delighted with the sport, and have his fist gloved with his jesses.” And Gilpin, in his description of a <abbr>Mr.</abbr> Hastings, remarks, “He kept all sorts of hounds that run buck, fox, hare, otter, and badger; and had hawks of all kinds both long and short winged. His great hall was commonly strewed with marrowbones, and full of hawk perches, hounds, spaniels, and terriers. On a broad hearth, paved with brick, lay some of the choicest terriers, hounds, and spaniels.” <a href="../text/stratford-on-avon.xhtml#noteref-51" epub:type="se:referrer">↩</a></p>
 				</li>
+				<li id="note-52" epub:type="rearnote">
+					<p>The <span epub:type="z3998:nationality">American</span> Government has been indefatigable in its exertions to ameliorate the situation of the <span epub:type="z3998:nationality">Indians</span>, and to introduce among them the arts of civilization and civil and religious knowledge. To protect them from the frauds of the white traders no purchase of land from them by individuals is permitted, nor is any person allowed to receive lands from them as a present without the express sanction of government. These precautions are strictly enforced. <a href="../text/traits-of-indian-character.xhtml#noteref-52" epub:type="se:referrer">↩</a></p>
+				</li>
 			</ol>
 		</section>
 	</body>
