[Semantics] Story 29 - Add semantics
Add semantics and structure, and include typography updates.

--- a/src/epub/text/endnotes.xhtml
+++ b/src/epub/text/endnotes.xhtml
@@ -435,6 +435,18 @@
 				<li id="note-52" epub:type="rearnote">
 					<p>The <span epub:type="z3998:nationality">American</span> Government has been indefatigable in its exertions to ameliorate the situation of the <span epub:type="z3998:nationality">Indians</span>, and to introduce among them the arts of civilization and civil and religious knowledge. To protect them from the frauds of the white traders no purchase of land from them by individuals is permitted, nor is any person allowed to receive lands from them as a present without the express sanction of government. These precautions are strictly enforced. <a href="../text/traits-of-indian-character.xhtml#noteref-52" epub:type="se:referrer">↩</a></p>
 				</li>
+				<li id="note-53" epub:type="rearnote">
+					<p>While correcting the proof-sheets of this article the author is informed that a celebrated <span epub:type="z3998:nationality">English</span> poet has nearly finished an heroic poem on the story of Philip of Pokanoket. <a href="../text/philip-of-pokanoket.xhtml#noteref-53" epub:type="se:referrer">↩</a></p>
+				</li>
+				<li id="note-54" epub:type="rearnote">
+					<p>Now <span epub:type="z3998:place">Bristol, Rhode Island</span>. <a href="../text/philip-of-pokanoket.xhtml#noteref-54" epub:type="se:referrer">↩</a></p>
+				</li>
+				<li id="note-55" epub:type="rearnote">
+					<p>The <cite><abbr>Rev.</abbr> Increase Mather’s <i epub:type="se:name.publication.book">History</i></cite>. <a href="../text/philip-of-pokanoket.xhtml#noteref-55" epub:type="se:referrer">↩</a></p>
+				</li>
+				<li id="note-56" epub:type="rearnote">
+					<p><cite><abbr class="initialism">MS</abbr> of the <abbr>Rev.</abbr> <abbr class="name">W.</abbr> Ruggles</cite>. <a href="../text/philip-of-pokanoket.xhtml#noteref-56" epub:type="se:referrer">↩</a></p>
+				</li>
 			</ol>
 		</section>
 	</body>
