[Semantics] Fix story ID

--- a/src/epub/text/philip-of-pokanoket.xhtml
+++ b/src/epub/text/philip-of-pokanoket.xhtml
@@ -6,7 +6,7 @@
 		<link href="../css/local.css" rel="stylesheet" type="text/css"/>
 	</head>
 	<body epub:type="bodymatter z3998:fiction">
-		<section id="philip-og-pokanoket" epub:type="volume se:short-story">
+		<section id="philip-of-pokanoket" epub:type="volume se:short-story">
 			<header>
 				<h2 epub:type="title">Philip of Pokanoket</h2>
 				<p epub:type="bridgehead">An <span epub:type="z3998:nationality">Indian</span> Memoir.</p>
