--- a/src/epub/text/endnotes.xhtml
+++ b/src/epub/text/endnotes.xhtml
@@ -379,7 +379,7 @@
 					</blockquote>
 				</li>
 				<li id="note-46" epub:type="rearnote">
-					<p>The following is the only stanza extant of this lampoon:—</p>
+					<p>The following is the only stanza extant of this lampoon:⁠—</p>
 					<blockquote>
 						<p>
 							<span>A parliament member, a justice of peace,</span>
