--- a/src/epub/text/colophon.xhtml
+++ b/src/epub/text/colophon.xhtml
@@ -12,22 +12,22 @@
 				<img alt="The Standard Ebooks logo" src="../images/logo.svg" epub:type="z3998:publisher-logo"/>
 			</header>
 			<p><i epub:type="se:name.publication.book">The Sketch-Book of Geoffrey Crayon, Gent.</i><br/>
-			was published in YEAR by<br/>
+			was published in 1820 by<br/>
 			<a href="https://en.wikipedia.org/wiki/Washington_Irving">Washington Irving</a>.</p>
 			<p>This ebook was produced for the<br/>
 			<a href="https://standardebooks.org">Standard Ebooks project</a><br/>
 			by<br/>
-			<a href="PRODUCERLINK">PRODUCER</a>,<br/>
+			<a href="http://scriptdaemon.me">Kenneth Williams</a>,<br/>
 			and is based on a transcription produced in 2000 by<br/>
-			<span class="name">Nelson Nieves</span>, and <span class="name">David Widger</span><br/>
+			<span class="name">Nelson Nieves</span> and <span class="name">David Widger</span><br/>
 			for<br/>
 			<a href="https://www.gutenberg.org/ebooks/2048">Project Gutenberg</a><br/>
-			and on digital scans available at the<br/>
-			<a href="IALINK">Internet Archive</a>.</p>
+			and on digital scans available at<br/>
+			<a href="https://books.google.com/books?id=BX5NAAAAYAAJ">Google Books</a>.</p>
 			<p>The cover page is adapted from<br/>
-			<i epub:type="se:name.visual-art.painting">PAINTING</i>,<br/>
-			a painting completed in YEAR by<br/>
-			<a href="ARTISTWIKILINK">ARTIST</a>.<br/>
+			<i epub:type="se:name.visual-art.painting">Ichabod Crane Flying from the Headless Horseman</i>,<br/>
+			a painting completed in 1828 by<br/>
+			<a href="https://en.wikipedia.org/wiki/John_Quidor">John Quidor</a>.<br/>
 			The cover and title pages feature the<br/>
 			<span epub:type="se:name.visual-art.typeface">League Spartan</span> and <span epub:type="se:name.visual-art.typeface">Sorts Mill Goudy</span><br/>
 			typefaces created in 2014 and 2009 by<br/>
