[Semantics] Story 33 - Add semantics
Add semantics and structure, and include typography updates.

--- a/src/epub/text/endnotes.xhtml
+++ b/src/epub/text/endnotes.xhtml
@@ -453,6 +453,9 @@
 				<li id="note-58" epub:type="rearnote">
 					<p><cite><abbr class="name">J.</abbr> Davors</cite>. <a href="../text/the-angler.xhtml#noteref-58" epub:type="se:referrer">↩</a></p>
 				</li>
+				<li id="note-59" epub:type="rearnote">
+					<p>The whip-poor-will is a bird which is only heard at night. It receives its name from its note, which is thought to resemble those words. <a href="../text/the-legend-of-sleepy-hollow.xhtml#noteref-59" epub:type="se:referrer">↩</a></p>
+				</li>
 			</ol>
 		</section>
 	</body>
