[Semantics] Story 34 - Add semantics
Add semantics and structure, and include typography updates.

--- a/src/epub/text/endnotes.xhtml
+++ b/src/epub/text/endnotes.xhtml
@@ -456,6 +456,9 @@
 				<li id="note-59" epub:type="rearnote">
 					<p>The whip-poor-will is a bird which is only heard at night. It receives its name from its note, which is thought to resemble those words. <a href="../text/the-legend-of-sleepy-hollow.xhtml#noteref-59" epub:type="se:referrer">↩</a></p>
 				</li>
+				<li id="note-60" epub:type="rearnote">
+					<p>Closing the second volume of the <span epub:type="z3998:place">London</span> edition. <a href="../text/lenvoy.xhtml#noteref-60" epub:type="se:referrer">↩</a></p>
+				</li>
 			</ol>
 		</section>
 	</body>
