--- a/src/epub/text/endnotes.xhtml
+++ b/src/epub/text/endnotes.xhtml
@@ -448,7 +448,7 @@
 					<p><cite><abbr class="initialism">MS</abbr> of the <abbr>Rev.</abbr> <abbr class="name">W.</abbr> Ruggles</cite>. <a href="../text/philip-of-pokanoket.xhtml#noteref-56" epub:type="se:referrer">↩</a></p>
 				</li>
 				<li id="note-57" epub:type="rearnote">
-					<p>From this same treatise, it would appear that angling is a more industrious and devout employment than it is generally considered.—“For when ye purpose to go on your disportes in fishynge ye will not desyre greatlye many persons with you, which might let you of your game. And that ye may serve God devoutly in saying effectually your customable prayers. And thus doying, ye shall eschew and also avoyde many vices, as ydelness, which is principall cause to induce man to many other vices, as it is right well known.” <a href="../text/the-angler.xhtml#noteref-57" epub:type="se:referrer">↩</a></p>
+					<p>From this same treatise, it would appear that angling is a more industrious and devout employment than it is generally considered.⁠—“For when ye purpose to go on your disportes in fishynge ye will not desyre greatlye many persons with you, which might let you of your game. And that ye may serve God devoutly in saying effectually your customable prayers. And thus doying, ye shall eschew and also avoyde many vices, as ydelness, which is principall cause to induce man to many other vices, as it is right well known.” <a href="../text/the-angler.xhtml#noteref-57" epub:type="se:referrer">↩</a></p>
 				</li>
 				<li id="note-58" epub:type="rearnote">
 					<p><cite><abbr class="name">J.</abbr> Davors</cite>. <a href="../text/the-angler.xhtml#noteref-58" epub:type="se:referrer">↩</a></p>
