[Lint] Clean and address linting issues

--- a/src/epub/text/endnotes.xhtml
+++ b/src/epub/text/endnotes.xhtml
@@ -235,7 +235,7 @@
 							<br/>
 							<span class="i2">Caput apri defero,</span>
 							<br/>
-							<span class="i7"><abbr>etc.</abbr>, <abbr>etc.</abbr>, <abbr class="eoc">etc.</abbr> <a href="../text/the-christmas-dinner.xhtml#noteref-35" epub:type="se:referrer">↩</a></span>
+							<span class="i7"><abbr>etc.</abbr>, <abbr>etc.</abbr>, <abbr class="eoc">etc.</abbr><a href="../text/the-christmas-dinner.xhtml#noteref-35" epub:type="se:referrer">↩</a></span>
 						</p>
 					</blockquote>
 				</li>
@@ -334,7 +334,7 @@
 							<br/>
 							<span>I am so wrapt and throwly lapt</span>
 							<br/>
-							<span class="i1">>Of joly good ale and olde.</span>
+							<span class="i1">Of joly good ale and olde.</span>
 							<br/>
 							<span>Backe and syde go bare, go bare, <abbr class="eoc">etc.</abbr></span>
 						</p>
