--- a/src/epub/text/preface.xhtml
+++ b/src/epub/text/preface.xhtml
@@ -49,7 +49,9 @@
 			<p>At this juncture Scott arrived in <span epub:type="z3998:place">London</span>. I called to him for help, as I was sticking in the mire, and, more propitious than Hercules, he put his own shoulder to the wheel. Through his favorable representations, Murray was quickly induced to undertake the future publication of the work which he had previously declined. A further edition of the first volume was struck off and the second volume was put to press, and from that time Murray became my publisher, conducting himself in all his dealings with that fair, open, and liberal spirit which had obtained for him the well-merited appellation of the Prince of Booksellers.</p>
 			<p>Thus, under the kind and cordial auspices of Sir Walter Scott, I began my literary career in <span epub:type="z3998:place">Europe</span>; and I feel that I am but discharging, in a trifling degree, my debt of gratitude to the memory of that golden-hearted man in acknowledging my obligations to him. But who of his literary contemporaries ever applied to him for aid or counsel that did not experience the most prompt, generous, and effectual assistance?</p>
 			<footer>
-				<p><abbr class="name signature">W. I.</abbr></p>
+				<p>
+					<abbr class="name signature">W. I.</abbr>
+				</p>
 			</footer>
 		</section>
 	</body>
