--- a/src/epub/text/roscoe.xhtml
+++ b/src/epub/text/roscoe.xhtml
@@ -73,6 +73,7 @@
 					<br/>
 					<span class="i2">And kindred spirits meet to part no more.</span>
 				</p>
+			</blockquote>
 		</section>
 	</body>
 </html>
