--- a/src/epub/text/stratford-on-avon.xhtml
+++ b/src/epub/text/stratford-on-avon.xhtml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops" epub:prefix="z3998: http://www.daisy.org/z3998/2012/vocab/structure/, se: https://standardebooks.org/vocab/1.0" xml:lang="en-US">
 	<head>
-		<title>Stratford-on-Avon</title>
+		<title>Stratford-On-Avon</title>
 		<link href="../css/core.css" rel="stylesheet" type="text/css"/>
 		<link href="../css/local.css" rel="stylesheet" type="text/css"/>
 	</head>
 	<body epub:type="bodymatter z3998:fiction">
 		<section id="stratford-on-avon" epub:type="volume se:short-story">
 			<header>
-				<h2 epub:type="title z3998:place">Stratford-on-Avon</h2>
+				<h2 epub:type="title z3998:place">Stratford-On-Avon</h2>
 				<blockquote epub:type="epigraph z3998:poem">
 					<p>
 						<span>Thou soft-flowing Avon, by thy silver stream</span>
@@ -173,6 +173,7 @@
 						<td>
 							<p>All his successors gone before him have done’t, and all his ancestors that come after him may; they may give the dozen white luces in their coat. </p>
 						</td>
+					</tr>
 					<tr>
 						<td colspan="2">
 							<hr/>
@@ -202,8 +203,8 @@
 							<p>Ha! o’ my life, if I were young again, the sword should end it!”</p>
 						</td>
 					</tr>
-				</tr>
-			</tbody>
+				</tbody>
+			</table>
 			<p>Near the window thus emblazoned hung a portrait, by Sir Peter Lely, of one of the Lucy family, a great beauty of the time of Charles the Second: the old housekeeper shook her head as she pointed to the picture, and informed me that this lady had been sadly addicted to cards, and had gambled away a great portion of the family estate, among which was that part of the park where Shakespeare and his comrades had killed the deer. The lands thus lost had not been entirely regained by the family even at the present day. It is but justice to this recreant dame to confess that she had a surpassingly fine hand and arm.</p>
 			<p>The picture which most attracted my attention was a great painting over the fireplace, containing likenesses of Sir Thomas Lucy and his family who inhabited the hall in the latter part of Shakespeare’s lifetime. I at first thought that it was the vindictive knight himself, but the housekeeper assured me that it was his son; the only likeness extant of the former being an effigy upon his tomb in the church of the neighboring hamlet of Charlecot.<a href="../text/endnotes.xhtml#note-50" id="noteref-50" epub:type="noteref">50</a></p>
 			<p>The picture gives a lively idea of the costume and manners of the time. Sir Thomas is dressed in ruff and doublet, white shoes with roses in them, and has a peaked yellow, or, as Master Slender would say, “a cane-colored beard.” His lady is seated on the opposite side of the picture in wide ruff and long stomacher, and the children have a most venerable stiffness and formality of dress. Hounds and spaniels are mingled in the family group; a hawk is seated on his perch in the foreground, and one of the children holds a bow, all intimating the knight’s skill in hunting, hawking, and archery, so indispensable to an accomplished gentleman in those days.<a href="../text/endnotes.xhtml#note-51" id="noteref-51" epub:type="noteref">51</a></p>
