--- a/src/epub/text/the-christmas-dinner.xhtml
+++ b/src/epub/text/the-christmas-dinner.xhtml
@@ -99,7 +99,7 @@
 				<p>
 					<span>The deep canne,</span>
 					<br/>
-					<Span>The merry deep canne,</Span>
+					<span>The merry deep canne,</span>
 					<br/>
 					<span>As thou dost freely quaff-a,</span>
 					<br/>
