--- a/src/epub/text/the-country-church.xhtml
+++ b/src/epub/text/the-country-church.xhtml
@@ -19,7 +19,9 @@
 						<br/>
 						<span>You vend your gentry by?</span>
 					</p>
-					<cite><i epub:type="se:name.publication.play">Beggar’s Bush</i></cite>
+					<cite>
+						<i epub:type="se:name.publication.play">Beggar’s Bush</i>
+					</cite>
 				</blockquote>
 			</header>
 			<p>There are few places more favorable to the study of character than an <span epub:type="z3998:nationality">English</span> country church. I was once passing a few weeks at the seat of a friend who resided in, the vicinity of one the appearance of which particularly struck my fancy. It was one of those rich morsels of quaint antiquity, which gives such a peculiar charm to <span epub:type="z3998:nationality">English</span> landscape. It stood in the midst of a country filled with ancient families, and contained within its cold and silent aisles the congregated dust of many noble generations. The interior walls were encrusted with monuments of every age and style. The light streamed through windows dimmed with armorial bearings, richly emblazoned in stained glass. In various parts of the church were tombs of knights, and highborn dames, of gorgeous workmanship, with their effigies in colored marble. On every side, the eye was struck with some instance of aspiring mortality, some haughty memorial which human pride had erected over its kindred dust in this temple of the most humble of all religions.</p>
