--- a/src/epub/text/the-legend-of-sleepy-hollow.xhtml
+++ b/src/epub/text/the-legend-of-sleepy-hollow.xhtml
@@ -94,9 +94,9 @@
 			<p>It is true an old farmer, who had been down to <span epub:type="z3998:place">New York</span> on a visit several years after, and from whom this account of the ghostly adventure was received, brought home the intelligence that Ichabod Crane was still alive; that he had left the neighborhood, partly through fear of the goblin and Hans Van Ripper, and partly in mortification at having been suddenly dismissed by the heiress; that he had changed his quarters to a distant part of the country, had kept school and studied law at the same time, had been admitted to the bar, turned politician, electioneered, written for the newspapers, and finally had been made a justice of the Ten Pound Court. Brom Bones too, who shortly after his rival’s disappearance conducted the blooming Katrina in triumph to the altar, was observed to look exceedingly knowing whenever the story of Ichabod was related, and always burst into a hearty laugh at the mention of the pumpkin; which led some to suspect that he knew more about the matter than he chose to tell.</p>
 			<p>The old country wives, however, who are the best judges of these matters, maintain to this day that Ichabod was spirited away by supernatural means; and it is a favorite story often told about the neighborhood round the intervening fire. The bridge became more than ever an object of superstitious awe, and that may be the reason why the road has been altered of late years, so as to approach the church by the border of the millpond. The schoolhouse, being deserted, soon fell to decay, and was reported to be haunted by the ghost of the unfortunate pedagogue; and the ploughboy, loitering homeward of a still summer evening, has often fancied his voice at a distance chanting a melancholy psalm tune among the tranquil solitudes of <span epub:type="z3998:place">Sleepy Hollow</span>.</p>
 			<section epub:type="subchapter z3998:postscript">
-					<header>
-						<p>Postscript Found in the Handwriting of <abbr>Mr.</abbr> Knickerbocker.</p>
-					</header>
+				<header>
+					<p>Postscript Found in the Handwriting of <abbr>Mr.</abbr> Knickerbocker.</p>
+				</header>
 				<p>The preceding tale is given almost in the precise words in which I heard it related at a Corporation meeting of the ancient city of <span epub:type="z3998:place">Manhattoes</span>, at which were present many of its sagest and most illustrious burghers. The narrator was a pleasant, shabby, gentlemanly old fellow in pepper-and-salt clothes, with a sadly humorous face, and one whom I strongly suspected of being poor, he made such efforts to be entertaining. When his story was concluded there was much laughter and approbation, particularly from two or three deputy aldermen who had been asleep the greater part of the time. There was, however, one tall, dry-looking old gentleman, with beetling eyebrows, who maintained a grave and rather severe face throughout, now and then folding his arms, inclining his head, and looking down upon the floor, as if turning a doubt over in his mind. He was one of your wary men, who never laugh but upon good grounds⁠—when they have reason and the law on their side. When the mirth of the rest of the company had subsided and silence was restored, he leaned one arm on the elbow of his chair, and sticking the other akimbo, demanded, with a slight but exceedingly sage motion of the head and contraction of the brow, what was the moral of the story and what it went to prove.</p>
 				<p>The storyteller, who was just putting a glass of wine to his lips as a refreshment after his toils, paused for a moment, looked at his inquirer with an air of infinite deference, and, lowering the glass slowly to the table, observed that the story was intended most logically to prove⁠—</p>
 				<p>“That there is no situation in life but has its advantages and pleasures⁠—provided we will but take a joke as we find it;</p>
@@ -105,7 +105,9 @@
 				<p>The cautious old gentleman knit his brows tenfold closer after this explanation, being sorely puzzled by the ratiocination of the syllogism, while methought the one in pepper-and-salt eyed him with something of a triumphant leer. At length he observed that all this was very well, but still he thought the story a little on the extravagant⁠—there were one or two points on which he had his doubts.</p>
 				<p>“Faith, sir,” replied the storyteller, “as to that matter, I don’t believe one-half of it myself.”</p>
 				<footer>
-					<p class="signature"><abbr class="name">D. K.</abbr></p>
+					<p class="signature">
+						<abbr class="name">D. K.</abbr>
+					</p>
 				</footer>
 			</section>
 		</section>
