--- a/src/epub/toc.xhtml
+++ b/src/epub/toc.xhtml
@@ -14,7 +14,120 @@
 					<a href="text/imprint.xhtml">Imprint</a>
 				</li>
 				<li>
-					<a href="text/chapter-1.xhtml"><span epub:type="z3998:roman">I</span>: CHAPTERTITLE</a>
+					<a href="text/epigraph.xhtml">Epigraph</a>
+				</li>
+				<li>
+					<a href="text/preface.xhtml">Preface to the Revised Edition</a>
+				</li>
+				<li>
+					<a href="text/halftitle.xhtml">The Sketch-Book of Geoffrey Crayon, Gent.</a>
+					<ol>
+						<li>
+							<a href="text/the-authors-account-of-himself.xhtml">The Author’s Account of Himself</a>
+						</li>
+						<li>
+							<a href="text/the-voyage.xhtml">The Voyage</a>
+						</li>
+						<li>
+							<a href="text/roscoe.xhtml">Roscoe</a>
+						</li>
+						<li>
+							<a href="text/the-wife.xhtml">The Wife</a>
+						</li>
+						<li>
+							<a href="text/rip-van-winkle.xhtml">Rip Van Winkle</a>
+						</li>
+						<li>
+							<a href="text/english-writers-on-america.xhtml">English Writers on America</a>
+						</li>
+						<li>
+							<a href="text/rural-life-in-england.xhtml">Rural Life in England</a>
+						</li>
+						<li>
+							<a href="text/the-broken-heart.xhtml">The Broken Heart</a>
+						</li>
+						<li>
+							<a href="text/the-art-of-book-making.xhtml">The Art of Book-Making</a>
+						</li>
+						<li>
+							<a href="text/a-royal-poet.xhtml">A Royal Poet</a>
+						</li>
+						<li>
+							<a href="text/the-country-church.xhtml">The Country Church</a>
+						</li>
+						<li>
+							<a href="text/the-widow-and-her-son.xhtml">The Widow and Her Son</a>
+						</li>
+						<li>
+							<a href="text/a-sunday-in-london.xhtml">A Sunday in London</a>
+						</li>
+						<li>
+							<a href="text/the-boars-head-tavern-eastcheap.xhtml">The Boar’s Head Tavern, Eastcheap</a>
+						</li>
+						<li>
+							<a href="text/the-mutability-of-literature.xhtml">The Mutability of Literature</a>
+						</li>
+						<li>
+							<a href="text/rural-funerals.xhtml">Rural Funerals</a>
+						</li>
+						<li>
+							<a href="text/the-inn-kitchen.xhtml">The Inn Kitchen</a>
+						</li>
+						<li>
+							<a href="text/the-spectre-bridegroom.xhtml">The Spectre Bridegroom</a>
+						</li>
+						<li>
+							<a href="text/westminster-abbey.xhtml">Westminster Abbey</a>
+						</li>
+						<li>
+							<a href="text/christmas.xhtml">Christmas</a>
+						</li>
+						<li>
+							<a href="text/the-stage-coach.xhtml">The Stage Coach</a>
+						</li>
+						<li>
+							<a href="text/christmas-eve.xhtml">Christmas Eve</a>
+						</li>
+						<li>
+							<a href="text/christmas-day.xhtml">Christmas Day</a>
+						</li>
+						<li>
+							<a href="text/the-christmas-dinner.xhtml">The Christmas Dinner</a>
+						</li>
+						<li>
+							<a href="text/london-antiques.xhtml">London Antiques</a>
+						</li>
+						<li>
+							<a href="text/little-britain.xhtml">Little Britain</a>
+						</li>
+						<li>
+							<a href="text/stratford-on-avon.xhtml">Stratford-On-Avon</a>
+						</li>
+						<li>
+							<a href="text/traits-of-indian-character.xhtml">Traits of Indian Character</a>
+						</li>
+						<li>
+							<a href="text/philip-of-pokanoket.xhtml">Philip of Pokanoket</a>
+						</li>
+						<li>
+							<a href="text/john-bull.xhtml">John Bull</a>
+						</li>
+						<li>
+							<a href="text/the-pride-of-the-village.xhtml">The Pride of the Village</a>
+						</li>
+						<li>
+							<a href="text/the-angler.xhtml">The Angler</a>
+						</li>
+						<li>
+							<a href="text/the-legend-of-sleepy-hollow.xhtml">The Legend of Sleepy Hollow</a>
+						</li>
+						<li>
+							<a href="text/lenvoy.xhtml">L’Envoy</a>
+						</li>
+					</ol>
+				</li>
+				<li>
+					<a href="text/endnotes.xhtml">Endnotes</a>
 				</li>
 				<li>
 					<a href="text/colophon.xhtml">Colophon</a>
@@ -34,7 +147,19 @@
 					<a href="text/imprint.xhtml" epub:type="frontmatter imprint">Imprint</a>
 				</li>
 				<li>
-					<a href="text/chapter-1.xhtml" epub:type="bodymatter z3998:fiction">WORKTITLE</a>
+					<a href="text/epigraph.xhtml" epub:type="frontmatter epigraph">Epigraph</a>
+				</li>
+				<li>
+					<a href="text/preface.xhtml" epub:type="frontmatter z3998:fiction preface">Preface to the Revised Edition</a>
+				</li>
+				<li>
+					<a href="text/halftitle.xhtml" epub:type="frontmatter halftitlepage">Half Tilte</a>
+				</li>
+				<li>
+					<a href="text/the-authors-account-of-himself.xhtml" epub:type="bodymatter z3998:fiction">The Sketch-Book of Goeffrey Crayon, Gent.</a>
+				</li>
+				<li>
+					<a href="text/endnotes.xhtml" epub:type="backmatter rearnotes">Endnotes</a>
 				</li>
 				<li>
 					<a href="text/colophon.xhtml" epub:type="backmatter colophon">Colophon</a>
