[Lint] Clean and address linting issues

--- a/src/epub/text/rural-funerals.xhtml
+++ b/src/epub/text/rural-funerals.xhtml
@@ -161,7 +161,9 @@
 					<span>Let balme and cassia send their scent</span>
 					<br/>
 					<span>From out thy maiden monument.</span>
-					<hr/>
+					<br/>
+					<span>* * * * * * *</span>
+					<br/>
 					<span>May all shie maids at wonted hours</span>
 					<br/>
 					<span>Come forth to strew thy tombe with flowers!</span>
