--- a/src/epub/text/the-christmas-dinner.xhtml
+++ b/src/epub/text/the-christmas-dinner.xhtml
@@ -21,7 +21,7 @@
 						<br/>
 						<span>Now all our neighbours’ chimneys smoke,</span>
 						<br/>
-						<span clss="i1">And Christmas blocks are burning;</span>
+						<span class="i1">And Christmas blocks are burning;</span>
 						<br/>
 						<span>Their ovens they with bak’t meats choke</span>
 						<br/>
