--- a/src/epub/text/christmas-day.xhtml
+++ b/src/epub/text/christmas-day.xhtml
@@ -16,7 +16,9 @@
 						<span>And give the honor to this day</span>
 						<br/>
 						<span>That sees December turn’d to May.</span>
-						<hr/>
+						<br/>
+						<span>* * * * * * *</span>
+						<br/>
 						<span>Why does the chilling winter’s morne</span>
 						<br/>
 						<span>Smile like a field beset with corn?</span>
