[Typography] Fix miscurled quotation marks
Closes #3

--- a/src/epub/text/stratford-on-avon.xhtml
+++ b/src/epub/text/stratford-on-avon.xhtml
@@ -59,7 +59,7 @@
 				<p>
 					<span>Hark! hark! the lark at heav’n’s gate sings,</span>
 					<br/>
-					<span class="i1">And Phoebus ‘gins arise,</span>
+					<span class="i1">And Phoebus ’gins arise,</span>
 					<br/>
 					<span>His steeds to water at those springs,</span>
 					<br/>
