--- a/src/epub/text/the-broken-heart.xhtml
+++ b/src/epub/text/the-broken-heart.xhtml
@@ -13,7 +13,7 @@
 					<p>
 						<span class="i7">I never heard</span>
 						<br/>
-						<span>Of any true affection, but ‘t was nipt</span>
+						<span>Of any true affection, but ’t was nipt</span>
 						<br/>
 						<span>With care, that, like the caterpillar, eats</span>
 						<br/>
