--- a/src/epub/text/the-country-church.xhtml
+++ b/src/epub/text/the-country-church.xhtml
@@ -15,7 +15,7 @@
 						<br/>
 						<span>What o’ the woolpack? or the sugar-chest?</span>
 						<br/>
-						<span>Or lists of velvet? which is ‘t, pound, or yard,</span>
+						<span>Or lists of velvet? which is ’t, pound, or yard,</span>
 						<br/>
 						<span>You vend your gentry by?</span>
 					</p>
